contrast error and suspicious link fixed 4th

--- a/photo_gallery.css
+++ b/photo_gallery.css
@@ -1,8 +1,7 @@
 h1 {
     text-align: center;
     background-color: black;
-    color:whitesmoke;
-    
+    color:aquamarine;
     width: auto;
     text-shadow: 2px 2px 20px blueviolet;
     font-size: 3em;
